--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "scripts": {
     "dev": "govuk-prototype-kit dev",
     "serve": "govuk-prototype-kit serve",
-    "start": "govuk-prototype-kit start"
+    "start": "govuk-prototype-kit start",
+    "generate-data": "node ./scripts/generate-referrals.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
     "govuk-frontend": "^4.4.0",
-    "govuk-prototype-kit": "^13.0.0"
+    "govuk-prototype-kit": "^13.0.0",
+    "lodash": "^4.17.21"
   }
 }
