--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@faker-js/faker": "^7.4.0",
     "govuk-frontend": "^4.4.0",
     "govuk-prototype-kit": "^13.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "luxon": "^3.1.0"
   }
 }
