--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "govuk-prototype-kit dev",
     "serve": "govuk-prototype-kit serve",
     "start": "govuk-prototype-kit start",
+    "test": "",
     "generate-data": "node ./scripts/generate-referrals.js"
   },
   "dependencies": {
